--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,17 @@
+# services:
+#   backend:
+#     image: my-backend-image:latest
+#     container_name: my-backend-container
+#     ports:
+#       - 80:8000
+#     command: "python main.py"
+
+version: "3.8"
+
 services:
   backend:
-    image: my-backend-image:latest
+    build: .
     container_name: my-backend-container
     ports:
-      - 80:8000
-    command: "python main.py"
+      - "80:8000"
+    command: uvicorn main:app --host 0.0.0.0 --port 8000
