--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:  # Это позволяет запускать workflow вручную
 
 jobs:
   build:
@@ -44,4 +45,3 @@ jobs:
 
     - name: Deploy with Docker Compose
       run: docker compose up -d
-
