--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: CI Pipeline
 
 on:
-  workflow_dispatch:  # Оставляем только ручной запуск
+  workflow_dispatch:  # Запуск по кнопке
 
 jobs:
   build:
@@ -29,15 +29,17 @@ jobs:
         run: docker run --rm my-backend-image pytest -s -v
 
   deploy:
-    name: Deploy with Docker Compose
-    runs-on: ubuntu-latest
+    name: Deploy with Docker Compose (на EC2)
+    runs-on: self-hosted  #<--------
     needs: test
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Build Docker image (for compose)
-      run: docker build -t my-backend-image .
+      - name: Pull latest code
+        run: git pull origin main
 
-    - name: Deploy with Docker Compose
-      run: docker compose up -d
+      - name: Rebuild and restart containers
+        run: |
+          docker compose down
+          docker compose up -d --build
